cmake_minimum_required(VERSION 3.8)
project(vincent_driver)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(std_msgs REQUIRED)

add_library(vincent_driver_component SHARED
  src/vincent_driver.cpp
)

target_compile_definitions(vincent_driver_component
  PRIVATE "COMPOSITION_BUILDING_DLL")

ament_target_dependencies(vincent_driver_component
  rclcpp
  rclcpp_components
)

rclcpp_components_register_nodes(vincent_driver_component
  "palomino::VincentDriver"
)

install(TARGETS
  vincent_driver_component
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
